# my-spacetraders

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  registration.json  shell.nix
.github/workflows/: Loc.yml  lines-of-code-badge.yml  rust.yml
automation/: Cargo.toml
automation/src/: admin.rs  cache.rs  contractor.rs  explorer.rs  func.rs  lib.rs  main.rs  miner.rs
interface/: Cargo.toml  style.css
interface/src/: enums.rs  lib.rs  main.rs  requests.rs  site.rs  tui.rs
interface/src/responses/: fleet.rs  mod.rs  schemas.rs
interface/src/tests/: responses.rs
spacetraders/: Cargo.toml
spacetraders/src/: enums.rs  lib.rs  requests.rs
spacetraders/src/responses/: contracts.rs  fleet.rs  mod.rs  schemas.rs
spacetraders/src/tests/: mod.rs  responses.rs
src/: interface.rs  lib.rs  main.rs
src/interface/: enums.rs  lib.rs  mod.rs  requests.rs  responses.rs  tests.rs
src/interface/responses/: agents.rs  contracts.rs  factions.rs  fleet.rs  mod.rs  schemas.rs  systems.rs
