[package]
name = "automation"
version = "0.1.0"
authors = ["sawyer bristol <sawyerbristol@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacetraders = { path =  "../spacetraders/"}
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.19"
serde = "1.0.164"
serde_json = { version = "1.0.99", fetures = ["std"] }
tokio = "1.28.2"
async-recursion = "1.0.4"
itertools = "0.11.0"
rayon = "1.7.0"
