[package]
name = "automation"
version = "0.1.0"
authors = ["sawyer bristol <sawyerbristol@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacetraders = { path = "../spacetraders/" }
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
clap = { version = "4.4.4", features = ["derive"] }
simple_logger = "4.2.0"
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["full"] }
async-recursion = "1.0.5"
ciborium = "0.2.1"
indextree = { version = "4.6.0", features = ["serde", "deser"] }
