[package]
name = "interface"
version = "0.1.0"
authors = ["sawyer bristol <sawyerbristol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacetraders = { path = "../spacetraders" }
automation = { path = "../automation" }
clap = "3.2.25"
tokio = "1.28.2"
