[package]
name = "interface"
version = "0.1.0"
authors = ["sawyer bristol <sawyerbristol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacetraders = { path = "../spacetraders" }
automation = { path = "../automation" }
crossterm = { version = "0.26.1", features = ["serde"] }
tui = { version = "0.19.0", default-features = false, features = [
  "crossterm",
  "serde",
] }
clap = { version = "4.3.10", features = ["derive"] }
tokio = "1.28.2"
simple_logger = "4.2.0"
log = "0.4.19"
