[package]
name = "interface"
version = "0.1.0"
authors = ["sawyer bristol <sawyerbristol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacetraders = { path = "../spacetraders" }
automation = { path = "../automation" }
clap = { version = "4.3.10", features = ["derive"] }
simple_logger = "4.2.0"
log = "0.4.19"
leptos = { version = "0.4.3", features = ["csr"] }
axum = "0.6.18"
tokio = { version = "1.22.0", features = ["full"] }
leptos_axum = "0.4.3"

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
output-name = "start-axum"
style-file = "./style.css"
site-addr = "127.0.0.1:3000"
