[package]
name = "spacetraders"
version = "0.1.0"
authors = ["sawyer bristol <sawyerbristol@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "serde_json" "rust-tls" ] }
serde = { version = "1.0.162", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
url = "2.3.1"
serde_json = "1.0"
random-string = "1.0.0"
convert_case = "0.6.0"
get-size = "0.1.3"
serial_test = "2.0.0"
lazy_static = "1.4.0"
async_once = "0.2.6"
serde_with = "3.0.0"
