[package]
name = "spacetraders"
version = "0.1.0"
authors = ["sawyer bristol <sawyerbristol@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "serde_json", "rustls-tls" ] }
serde = { version = "1.0.162", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
bson = { version = "2.6.1", features = ["chrono-0_4"] }
url = "2.3.1"
serde_json = "1.0"
random-string = "1.0.0"
convert_case = "0.6.0"
get-size = "0.1.3"
serial_test = "2.0.0"
rand = "0.5.0"
rand_derive = "0.5.0"
log = "0.4.19"
async-recursion = "1.0.4"
reqwest-retry = "0.2.2"
reqwest-middleware = "0.2.2"
