[package]
name = "spacetraders"
version = "0.1.0"
authors = ["sawyer bristol <sawyerbristol@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", features = [
  "json",
  "serde_json",
  "rustls-tls",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_path_to_error = "0.1.14"
chrono = { version = "0.4.31", features = ["serde"] }
# bson = { version = "2.6.1", features = ["chrono-0_4"] }
strum = "0.25"
strum_macros = "0.25"
url = "2.4.1"
serde_json = "1.0"
random-string = "1.0.0"
convert_case = "0.6.0"
serial_test = "2.0.0"
rand = "0.5.6"
rand_derive = "0.5.0"
log = "0.4.20"
async-recursion = "1.0.5"
reqwest-retry = "0.2.3"
reqwest-middleware = "0.2.3"
thiserror = "1.0"
simple_logger = "4.2.0"
